--- a/StudentManagement/Home.Master
+++ b/StudentManagement/Home.Master
@@ -14,6 +14,9 @@
     <%--custom css--%>
     <link href="css/customstylesheet.css" rel="stylesheet" />
 
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
      <%--jquery--%>
     <script src="Scripts/jquery-3.0.0.slim.min.js"></script>
      <%--poppper js--%>
@@ -123,7 +126,7 @@
             <div id="footer2" class="container-fluid">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                        <p style="color:whitesmoke">&copy All right Reversed.</p>
+                        <p style="color:whitesmoke">&copy All right Reserved.</p>
                     </div>
                 </div>
             </div>
